# Youtube_transcript

./: Cargo.toml  README.md
src/: main.rs  transcript.txt  transcript1.txt
